# iqlogger

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md
.build/: Dockerfile  build-16.sh  build-18.sh
.build_deb/: create-deb.sh  create_deb_16.sh  create_deb_18.sh  post-install.sh  pre-install.sh
.build_deb/ubuntu-18/etc/iqlogger/: iqlogger.json  processor.js
.build_deb/ubuntu18/etc/systemd/system/: iqlogger.service
.docker/: Dockerfile
.docker/etc/iqlogger/: iqlogger.json
.test/: Dockerfile  docker-compose.yml  iqlogger.json
.test/receiver/: Dockerfile  test.sh
.test/sender/: Dockerfile  test.sh
cmake/: input.CMakeLists.txt  output.CMakeLists.txt  stats.CMakeLists.txt
src/: Defines.h.in  Exception.h  IQLogger.cpp  IQLogger.h  InputServer.cpp  InputServer.h  MainMessageQueue.cpp  MainMessageQueue.h  Message.h.in  MessageQueue.cpp  MessageQueue.h  Module.h  OutputServer.cpp  OutputServer.h  Version.h.in  main.cpp
src/config/: Config.cpp  Config.h.in  ConfigException.h  ConfigInterface.h  ConfigManager.cpp  ConfigManager.h
src/config/core/: Core.cpp  Core.h  QueueOverflowStrategy.cpp  QueueOverflowStrategy.h
src/config/input/: InputConfig.cpp  InputConfig.h.in
src/config/logger/: LoggerConfig.cpp  LoggerConfig.h
src/config/output/: OutputConfig.cpp  OutputConfig.h.in
src/config/processor/: ProcessorConfig.cpp  ProcessorConfig.h
src/config/stats/: StatsConfig.cpp  StatsConfig.h.in
src/core/: Base.cpp  Base.h  Log.cpp  Log.h  Singleton.h  TaskInterface.h
src/formats/: MessageInterface.h  Object.h
src/formats/gelf/: GelfException.h  GelfMessage.cpp  GelfMessage.h  ObjectWrapper.cpp
src/formats/journal/: JournalMessage.cpp  JournalMessage.h  ObjectWrapper.cpp  ObjectWrapper.h
src/formats/json/: JsonException.h  JsonMessage.h  ObjectWrapper.cpp
src/formats/tail/: ObjectWrapper.cpp  TailMessage.h
src/inputs/: IOInput.cpp  IOInput.h  Input.cpp  Input.h  InputInterface.cpp.in  InputInterface.h  Record.h
src/inputs/dummy/: CMakeLists.txt  CheckConfig.cpp  Dummy.h  DummyInput.cpp  DummyInput.h  Input.cpp  Input.h
src/inputs/gelf/: CMakeLists.txt  CheckConfig.cpp  Gelf.h  Input.cpp  Input.h
src/inputs/gelf/tcp/: GelfInput.cpp  GelfInput.h  Server.cpp  Server.h
src/inputs/gelf/udp/: ChunkProcessor.cpp  ChunkProcessor.h  GelfChunk.cpp  GelfChunk.h  GelfInput.cpp  GelfInput.h  Server.cpp  Server.h
src/inputs/journal/: CMakeLists.txt  CheckConfig.cpp  Input.cpp  Input.h  Journal.h  JournalInput.cpp  JournalInput.h  JournalReader.cpp  JournalReader.h
src/inputs/json/: CMakeLists.txt  CheckConfig.cpp  Input.cpp  Input.h  Json.h
src/inputs/json/tcp/: JsonInput.cpp  JsonInput.h  Server.h
src/inputs/json/udp/: JsonInput.cpp  JsonInput.h  Server.cpp  Server.h
src/inputs/tail/: CMakeLists.txt  CheckConfig.cpp  Event.cpp  Event.h  InotifyServer.cpp  InotifyServer.h  Input.cpp  Input.h  SavePositionServer.cpp  SavePositionServer.h  Tail.h  TailInput.cpp  TailInput.h  TailMonitor.cpp  TailMonitor.h
src/metrics/: InternalMetrics.h  Metrics.h  MetricsController.cpp  MetricsController.h  ProcStat.h
src/outputs/: Output.cpp  Output.h  OutputInterface.cpp.in  OutputInterface.h  Record.h
src/outputs/gelf/: CMakeLists.txt  Gelf.h  Output.cpp  Output.h
src/outputs/gelf/tcp/: GelfOutput.cpp  GelfOutput.h
src/outputs/log/: CMakeLists.txt  Log.h  LogOutput.cpp  LogOutput.h  Output.cpp  Output.h
src/processor/: CMakeLists.txt  Engine.cpp  Engine.h  Processor.cpp  Processor.h  ProcessorException.h  ProcessorMachine.cpp  ProcessorMachine.h  ProcessorMessage.h  ProcessorTypes.h
src/processor/v8/: Console.cpp  Console.h  ConsoleWrapper.cpp  ConsoleWrapper.h  Engine.cpp  Engine.h  Isolate.cpp  Isolate.h  IsolateScope.cpp  IsolateScope.h  ObjectWrapper.cpp  ObjectWrapper.h  Processor.cpp  Processor.h  V8.h
src/stats/: StatsExportServer.cpp  StatsExportServer.cpp.in  StatsExportServer.h
src/stats/http/: CMakeLists.txt  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  Header.h  MimeTypes.cpp  MimeTypes.h  Reply.cpp  Reply.h  Request.h  RequestHandler.cpp  RequestHandler.h  RequestParser.cpp  RequestParser.h  Server.cpp  Server.h  StatsExportServer.cpp
src/stats/telegraf/: CMakeLists.txt  Exporter.cpp  Exporter.h  Server.cpp  Server.h  StatsExportServer.cpp
src/utils/: Atomic.h  Enum.h  Json.h  TypeTraits.h
